funny change for Valerie

--- a/functional-samples/tutorial.hello-world/hello.html
+++ b/functional-samples/tutorial.hello-world/hello.html
@@ -1,6 +1,7 @@
 <html>
   <body>
-    <h1>Hello Extensions</h1>
+    <h1>"I will remember to always listen to my magnanimous father."</h1>
+    <h2>Valerie Chu</h2>
     <script src="popup.js"></script>
   </body>
 </html>
